# django-blog

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py
blog/: admin.py  filters.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_auto_20200206_1657.py
blog/templates/blog/: about_me.html  post_detail.html  post_list.html  widget_tags.html
blog/tests/: common_fixtures.py  test_model_post.py  test_urls.py  test_views.py
config/: settings.py  urls.py
core/: utils.py
static/css/: blog.css
templates/: base_blog.html
